# facesdk-flutter

./: .metadata  LICENSE  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_face_sdk_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: GeneratedPluginRegistrant.m  Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: faces_tracker.dart  main.dart
ios/: flutter_face_sdk.podspec
ios/Classes/: flutter_face_sdk.c
lib/: converter.dart  flutter_face_sdk.dart  utils.dart
src/: CMakeLists.txt  flutter_face_sdk.c  flutter_face_sdk.h
